# ai-meeting-assistant

./: .gitignore  AGENTS.md  EGUI_MIGRATION_REPORT.md  EGUI_ROLLBACK.md  EGUI_SWITCH_GUIDE.md  README.md  blank.html  divider.html  empty.html  index.html  interview项目备忘-安装包规则.ini  intro.html  main-package-README.md  optional-package-README.md  package.json  pnpm-lock.yaml  resume.profile.md  signing-README.md  vite.config.js
.backup-speaker-20260202_144754/: Cargo.toml  app_config.rs  blank.html  main.rs  manager.rs  mod.rs  output.js  writer.rs
certs/: aishepherd-test-3.cer  aishepherd-test-3.pfx  aishepherd-test.cer
msix-out/_inspect/: AppxBlockMap.xml  AppxManifest.xml  [Content_Types].xml
msix-out/_inspect_fixed/: AppxBlockMap.xml  AppxManifest.xml  Resources.pri  [Content_Types].xml
msix-out/_opt_clean/: AppxManifest.xml
msix-out/_opt_fix/: AppxManifest.xml
msix-out/_opt_fix/VFS/Common AppData/NVIDIA Corporation/Drs/: nvAppTimestamps
src/: config.json  divider.js  intro.css  main.js  output.js  right.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/config/: audio.json
src-tauri/src/: app_config.rs  asr.rs  egui_app.rs  main.rs  transcribe.rs  transcribe_backend.rs  translate.rs  ui_events.rs  whisper_server.rs
src-tauri/src/audio/: config.rs  manager.rs  mod.rs  speaker.rs  wasapi.rs  writer.rs
src-tauri/src/rag/: chunker.rs  embedder.rs  file_filter.rs  lancedb_store.rs  mod.rs  paths.rs  projects.rs  service.rs  store.rs  types.rs
tools/protoc/: protoc-bin-vendored-win32-3.2.0.crate
