[package]
name = "ai-shepherd"
version = "0.1.0"
description = "AI Shepherd"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hound = "3"
webrtc-vad = "0.4.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
] }
