[package]
name = "ai-shepherd"
version = "0.1.0"
description = "AI Shepherd"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hound = "3"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
] }
lancedb = "0.10"
fastembed = "5.8.1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
once_cell = "1"
arrow-array = "52.2"
arrow-schema = "52.2"
num_cpus = "1"
rfd = "0.15"

[patch.crates-io]
arrow-arith = { path = "patches/arrow-arith-52.2.0" }
